--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.3",
     "socket.io": "^4.7.5",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   }
 }
